--- a/AspMvcOnlineCommercialWebProject/Views/Category/AddCategory.cshtml
+++ b/AspMvcOnlineCommercialWebProject/Views/Category/AddCategory.cshtml
@@ -13,7 +13,8 @@
     <!--Html Helper yapısı vardır. Asp.Net'de olduğu gibi toolbox menüsü ve bunları ekleyebileceğim (input gibi) bir yapı MVC'de mevcut değildir
         İşte bunları kullanmak için HTml Helper yapısı kullanılır. Yani bununla istediğim araçlarımı yapılarımı kullanmamı sağlar. Radiobutton,textarea gibi daha pek çok yapıyı
         bununla kullanabiliriz.-->
-    @Html.LabelFor(x =>x.CategoryName) <!--Burada veritabanındaki ismi ne ise o isimle label'ı bana verir.'-->
+    @*@Html.LabelFor(x =>x.CategoryName)*@ <!--Burada veritabanındaki ismi ne ise o isimle label'ı bana verir.'-->
+    <label>Kategori Adı</label>
     @Html.TextBoxFor(x => x.CategoryName, new { @class="form-control" })<!--Bu kullanımın adı lambda operation'dır. Bununla veritabanındaki verilerimi getiriyorum. Syntax'ı bu şekildedir. Burada x soyut bir
                                              değişken olarak düşünülebilir. Değişkenlere ulaşmayı sağlar.
                                                                             class=Form-control ile biçimsel özellik verdim. Yani css verdim. -->
