--- a/AspMvcOnlineCommercialWebProject/Views/Shared/_AdminLayout.cshtml
+++ b/AspMvcOnlineCommercialWebProject/Views/Shared/_AdminLayout.cshtml
@@ -56,7 +56,7 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-flask"></i></div>
                             Ürünler
                         </a>
-                        <a class="nav-link" href="index.html">
+                        <a class="nav-link" href="/Department/Index">
                             <div class="sb-nav-link-icon"><i class="fas fa-bars"></i></div>
                             Departmanlar
                         </a>
